add_library(pulp-platform)
add_library(pulp::platform ALIAS pulp-platform)

target_include_directories(pulp-platform
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

target_sources(pulp-platform PRIVATE
    src/platform.cpp
    src/file_dialog_stub.cpp
    src/popup_menu_stub.cpp
    src/permissions.cpp
    src/registry.cpp
    src/clipboard_common.cpp
    src/environment.cpp
    src/dbus.cpp
)

# Platform-specific UI services and child process
if(APPLE AND NOT IOS)
    target_sources(pulp-platform PRIVATE
        platform/mac/clipboard_mac.mm
        platform/mac/file_dialog_mac.mm
        platform/mac/popup_menu_mac.mm
        platform/mac/environment_mac.mm
        platform/posix/child_process_posix.cpp
    )
    target_link_libraries(pulp-platform PRIVATE
        "-framework Cocoa"
        "-framework UniformTypeIdentifiers"
    )
elseif(IOS)
    # iOS: UIKit-backed clipboard; posix_spawn works (addchdir_np is
    # gated inside child_process_posix.cpp via TargetConditionals).
    # File dialogs and popup menus fall through to the stubs.
    target_sources(pulp-platform PRIVATE
        platform/ios/clipboard_ios.mm
        platform/ios/environment_ios.mm
        platform/ios/permissions_ios.mm
        platform/posix/child_process_posix.cpp
    )
    # PUBLIC so downstream test binaries can branch on the same define as the
    # backend TU — otherwise the test expecting has_platform_backend()==true
    # silently takes the desktop code path.
    target_compile_definitions(pulp-platform PUBLIC PULP_PERMISSIONS_HAS_BACKEND=1)
    target_link_libraries(pulp-platform PRIVATE
        "-framework UIKit"
        "-framework UniformTypeIdentifiers"
        "-framework AVFoundation"
        "-framework CoreBluetooth"
        "-framework UserNotifications"
    )
elseif(WIN32)
    target_sources(pulp-platform PRIVATE
        platform/win/clipboard_win.cpp
        platform/win/file_dialog_win.cpp
        platform/win/child_process_win.cpp
        platform/win/environment_win.cpp
    )
    # ole32: COM (CoInitializeEx/CoCreateInstance/CoTaskMemFree) for the
    # IFileDialog file-dialog backend in file_dialog_win.cpp.
    target_link_libraries(pulp-platform PRIVATE user32 advapi32 ole32)
elseif(ANDROID)
    # Android platform sources wired via PulpAndroid.cmake → pulp_wire_android_sources()
    # The Android permissions_backend.cpp (picked up by that glob) defines
    # PULP_PERMISSIONS_HAS_BACKEND via the compile definition below so the
    # desktop fallback in src/permissions.cpp compiles out.
    target_sources(pulp-platform PRIVATE
        platform/posix/child_process_posix.cpp
    )
    # PUBLIC so downstream test binaries can branch on the same define as the
    # backend TU — otherwise the test expecting has_platform_backend()==true
    # silently takes the desktop code path.
    target_compile_definitions(pulp-platform PUBLIC PULP_PERMISSIONS_HAS_BACKEND=1)
elseif(UNIX AND NOT APPLE)
    target_sources(pulp-platform PRIVATE
        platform/linux/clipboard_linux.cpp
        platform/linux/environment_linux.cpp
        platform/linux/file_dialog_portal_linux.cpp
        platform/posix/child_process_posix.cpp
    )
    # dbus.cpp dlopen's libdbus-1 at runtime — needs libdl for dlopen/dlsym.
    target_link_libraries(pulp-platform PRIVATE ${CMAKE_DL_LIBS})
endif()
